--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.8.0",
     "next-redux-wrapper": "^8.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.13.1",
     "stylelint": "^13.0.0",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^4.0.0",
