--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_DOMAIN=
-NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_DOMAIN=https://api-portal.banana.codes
+NEXT_PUBLIC_API_KEY=your_secret_api_key
